--- a/dapp-ui/package.json
+++ b/dapp-ui/package.json
@@ -1,25 +1,44 @@
 {
   "name": "dapp-ui",
-  "version": "1.0.0",
-  "description": "Nuxt.js project",
+  "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate"
-  },
   "dependencies": {
-    "@walletconnect/browser": "^1.0.0-beta.31",
-    "@walletconnect/qrcode-modal": "^1.0.0-beta.31",
-    "bootstrap": "^4.1.3",
-    "bootstrap-vue": "^2.0.0-rc.11",
-    "node-sass": "^4.12.0",
-    "nuxt": "^2.0.0",
-    "vuejs-datepicker": "^1.6.2"
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.3",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "tronweb": "^4.4.0",
+    "typescript": "^4.8.4",
+    "web-vitals": "^2.1.4"
   },
-  "devDependencies": {
-    "nodemon": "^1.18.9",
-    "sass-loader": "^7.1.0"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
